--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<script src="lib/angular.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
-	<script type="text/javascript" src="js/controller.js"></script>
+    <title></title>
+    <script src="lib/angular.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/controller.js"></script>
   </head>
   <body ng-app="Angular_Learning">
-  	<div>
-	    <p>This is your first angular expression {{10 + 5}}</p>
+    <div>
+        <p>This is your first angular expression {{10 + 5}}</p>
 
-	    Enter your name: <input type="text" ng-model="name">
-	    <p ng-show="name">Hello {{name}}!</p>
-	    <p>Hey Welcome <strong><span ng-bind="name"></span></strong></p>
-	</div>
-  	<div ng-controller="secondController">
-  		<p>Hello</p>
-  	</div>
+        Enter your name: <input type="text" ng-model="name">
+        <p ng-show="name">Hello {{name}}!</p>
+        <p>Hey Welcome <strong><span ng-bind="name"></span></strong></p>
+    </div>
+    <div ng-controller="secondController">
+        <label>Your User Name:</label>
+        <input type="text" name="username" ng-model="uname"/ >
+        <p> Your username is: <span>{{uname}}</span>
+    </div>
   </body>
 </html>
