Made single page for login and signup

--- a/Quiz_Angular/pages/signUp.html
+++ b/Quiz_Angular/pages/signUp.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="card" style="height:450px">
+    <div class="card" style="height:340px;padding: 5px 20px 18px 20px;">
         <h1 class="title">Sign Up</h1>
         <div class="form-group">
             <label>Full Name</label>
