--- a/Quiz_Angular/pages/login.html
+++ b/Quiz_Angular/pages/login.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-show="loginDisplay">
     <div class="card">
         <h1 class="title">Register</h1>
         <div class="form-group">
@@ -15,6 +15,31 @@
             <button ng-click="loginOps(loginData)" class="btn btn-success">Let's GO &nbsp;<span class="glyphicon glyphicon-log-in"></span> </button>
         </div>
 
-        <p>New Member? <a ui-sref="usersignup">Sign Up Here</a></p>
+        <p>New Member? <a ng-click="changeForm(false,true)">Sign Up Here</a></p>
+    </div>
+</div>
+
+<div class="container" ng-show="signUpDisplay">
+    <div class="card" style="height:340px;padding: 5px 20px 18px 20px;">
+        <h1 class="title">Sign Up</h1>
+        <div class="form-group">
+            <label>Full Name</label>
+            <input type="text" ng-model="signUpData.name" id="User" class="form-control" required="required" />
+
+        </div>
+        <div class="form-group">
+            <label>Email Id</label>
+            <input type="email" ng-model="signUpData.email" class="form-control" maxlength="10" required="required" />
+
+        </div>
+        <div class="form-group">
+            <label>DoB</label>
+            <input type="date" ng-model="signUpData.dob" id="number" class="form-control" maxlength="10" required="required" />
+
+        </div>
+        <div class="form-group" ng-show="signUpData.name && signUpData.email">
+            <button ng-click="signUpOps(signUpData)" class="btn btn-success">Let's Submit &nbsp;<span class="glyphicon glyphicon-log-in"></span> </button>
+        </div>
+        <p>Existing User? <a ng-click="changeForm(true,false)">Login Now</a></p>
     </div>
 </div>
