--- a/Quiz_Angular/index.html
+++ b/Quiz_Angular/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
+    <script type="text/javascript" src="js/services.js"></script>
 </head>
 
 <body ng-app="Quiz_angular">
