--- a/Quiz_Angular/pages/login.html
+++ b/Quiz_Angular/pages/login.html
@@ -8,10 +8,10 @@
         </div>
         <div class="form-group">
             <label>Mobile</label>
-            <input type="number" ng-model="loginData.mobile" id="number" class="form-control" maxlength="10" required="required" />
+            <input type="number" ng-model="loginData.phonenumber" id="number" class="form-control" maxlength="10" required="required" />
 
         </div>
-        <div class="form-group" ng-show="loginData.username && loginData.mobile">
+        <div class="form-group" ng-show="loginData.username && loginData.phonenumber">
             <button ng-click="loginOps(loginData)" class="btn btn-success">Let's GO &nbsp;<span class="glyphicon glyphicon-log-in"></span> </button>
         </div>
 
